# velodyne-object-clustering

./: .gitignore  README.md
sample/velodyne_viewer/: VelodyneCapture.h
sample/velodyne_viewer/include/: main.hpp
sample/velodyne_viewer/include/process/: processPointClouds.hpp
sample/velodyne_viewer/include/render/: box.hpp  render.hpp
sample/velodyne_viewer/include/velodyne/: velodyneCapture.hpp
sample/velodyne_viewer/src/: main.cpp
sample/velodyne_viewer/src/process/: processPointClouds.cpp
sample/velodyne_viewer/src/render/: render.cpp
sample/viewer/: CMakeLists.txt  main.cpp
simple/: CMakeLists.txt  VelodyneCapture.h  main.cpp
velodyne_clustering/: CMakeLists.txt  README.md
velodyne_clustering/include/: main.h
velodyne_clustering/include/velodyne_driver/: driver.h  input.h
velodyne_clustering/include/velodyne_pointcloud/: calibration.h  datacontainerbase.h  point_types.h  pointcloudXYZIR.h  rawdata.h  transform.h
velodyne_clustering/src/: main.cpp
velodyne_clustering/src/velodyne_driver/: driver.cpp
velodyne_clustering/src/velodyne_pointcloud/: calibration.cpp  pointcloudXYZIR.cpp  rawdata.cpp  transform.cpp
velodyne_viewer/: CMakeLists.txt
velodyne_viewer/include/: main.hpp
velodyne_viewer/include/process/: processPointClouds.hpp
velodyne_viewer/include/render/: render.hpp
velodyne_viewer/include/velodyne/: velodyneCapture.hpp
velodyne_viewer/src/: main.cpp
vlp16-viewer/: CMakeLists.txt  README.md
vlp16-viewer/include/: main.h
vlp16-viewer/include/velodyne_cluster/: process.h  vector.h
vlp16-viewer/include/velodyne_driver/: driver.h  input.h
vlp16-viewer/include/velodyne_pcl/: timer.h  viewer.h
vlp16-viewer/include/velodyne_pointcloud/: datacontainerbase.h  pointcloudXYZIR.h  rawdata.h  transform.h
vlp16-viewer/src/: main.cpp
vlp16-viewer/src/velodyne_cluster/: process.cpp
vlp16-viewer/src/velodyne_driver/: driver.cpp  input.cpp
vlp16-viewer/src/velodyne_pcl/: viewer.cpp
vlp16-viewer/src/velodyne_pointcloud/: calibration.cpp  pointcloudXYZIR.cpp  rawdata.cpp  transform.cpp
vlp16-viewer/tests/: renderTest.cpp  viewerTest.cpp
